--- a/Project1style.css
+++ b/Project1style.css
@@ -12,6 +12,7 @@ img {
   border-right-color: #F6F6F6;
 }
 
+
 .leftIcon {
   margin-top: 10px;
   width: 10%;
@@ -34,6 +35,13 @@ img {
 
 .introInfo {
   font-size: 14px;
+}
+
+.container {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  
 }
 
 .icelandSights {
