--- a/Project1style.css
+++ b/Project1style.css
@@ -41,6 +41,7 @@ img {
   width: 100%;
   height: 600px;
   display: flex;
+  margin: auto;
   
 }
 
@@ -67,7 +68,7 @@ img {
 }
 
 .iS3 {
-  font-size: 22px;
+  font-size: 18px;
   width: 55%;
   height: 45%;
   position: absolute;
@@ -78,7 +79,7 @@ img {
 .iS4 {
   width: 55%;
   height: 45%;
-  font-size: 22px;
+  font-size: 18px;
   position: absolute;
   left: 150px;
   top: 340px;
