--- a/Assignment5.css
+++ b/Assignment5.css
@@ -11,7 +11,7 @@ img {
 }
 
 .left {
-  width: 40%;
+  width: 55%;
   border: 2px solid black;
   height: 900px;
   margin-left: 70px;
@@ -23,15 +23,16 @@ img {
 }
 
 .right {
-  width: 40%;
+  width: 55%;
   border: 2px solid blue;
   height: 900px;
-  margin-left: 10%;
+  margin-left: 5%;
   align-content: center;
   text-align: center;
   background-color: blue;
   color: white;
   font-size: 18px;
+  margin-right: 4%;
 }
 
 .xbox {
