--- a/Project3.css
+++ b/Project3.css
@@ -1,189 +1,119 @@
-img{
-    width:100%;
-    height:100%;
+body {
+  background: linear-gradient(90deg, #0093E9 40%, #80D0C7 80%);
 }
 
-body{
-    background: linear-gradient(to top right, #9198e5, #f78773, #ffaf8a);
+img {
+  width: 100%;
+  height: 100%;
 }
 
-header{
-    width:100%;
-    height:150px;
-    display: flex;
-    position: relative;
+header {
+  width: 100%;
+  height: 150px;
+
+  color: white;
+  display: flex;
+  position: relative;
 }
 
-.top-container{
-    width:33%;
-    height:100%;
-    margin: auto;
-    color:white;
+.guess {
+  font-size: 18px;
+  font-family: arial;
+  width: 33%;
 }
 
-.top-guess{
-    text-align: center;
-    font-size: 25px;
-    padding-top: 3%;
+.guessMyNumber {
+  text-align: center;
+  font-size: 32px;
+  width: 36%;
+  text-indent: 20px;
 }
 
-.top-play{
-    text-align: end;
+.playButton {
+  width: 33%;
+  text-align: end;
 }
 
-.top-button{
-    height:30%;
-    width:15%;
-    margin-left: auto;
-    margin-top: 3%;
+.play {
+  text-align: center;
+  width: 25%;
+  height: 25%;
+  background-color: orange;
+  border: 2px solid red;
+  border-radius: 10px;
+  color: white;
+  font-size: 18px;
 }
 
-.top-button > input {
-    background-color:skyblue;
-    height:100%;
-    width:100%;
-    color:white;
-    border:1px solid yellow;
-    border-radius: 10%;
+.questionMark {
+  width: 100%;
+  height:100px;
+  display: flex;
+  position: relative;
+  align-items: center;
 }
 
-h2 {
-    width: 100%;
-    text-align: center;
-    border-bottom: 4px solid white;
-    line-height: 0.1em;
-    margin: 10px 0 20px;
- }
- h2 span {
-     border-radius: 5%;
-     background: #fff;
-     padding: 10px 20px;
-     font-size: 50px;
- }
-
-
- .bottom-container{
-     margin-top: 5%;
-     width:100%;
-     height:450px;
-     display:flex;
- }
-
-.left1{
-    width:30%;
-    height:100%;
-    margin: auto;
- }
-
- .mid1{
-     width:30%;
-     height:100%;
-     margin: auto;
-  }
-
- .right1{
-     width:30%;
-     height:100%;
-     margin: auto;
-  }
-
- .hint{
-     height:20%;
-     width:50%;
-     margin-left: auto;
-     margin-top: auto;
-     font-size: 20px;
-     text-align: end;
- }
-
- .scores{
-     height:20%;
-     width:50%;
-     margin-left: auto;
-     margin-top: auto;
-     font-size: 20px;
-     text-align: end;
- }
-
-.score{
-    height:45%;
-    width:100%;
-    display: flex;
-
- }
-
- .score>.textemoji{
-     height:100%;
-     width:100%;
-     margin-right: 0;
- }
-
- .mid1{
-     position: relative;
-     font-size: 100%;
-     color: white;
- }
-
- .box{
-     border:2px solid white;
-     width:80%;
-     height:20%;
-     text-align: center;
-     position: absolute;
-     bottom: 0%;
-     right:8%;
- }
-.input-box{
-    background-color: transparent;
-    height:100%;
-    width:100%;
-    border:none;
-    text-align: center;
-    font-size: 20px;
+.qq {
+  width: 6%;
+  height: 90%;
+  border: 2px solid black;
+  margin: auto;
 
 }
-.number-box{
-    width:40%;
-    height:20%;
-    border: 2px solid whitesmoke;
-    margin: auto;
+
+hr {
+  width: 100%;
+  height: 4px;
+  background-color: white;
 }
 
-.submit-box{
-    width:20%;
-    height:8%;
-
-    margin: auto;
-    margin-top: 5%;
+.bottomContainer {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  position: relative;
 }
 
-input{
-    color:white;
+.scoreCard {
+  color: white;
+  width: 33%;
+  text-align: end;
+  font-size: 24px;
 }
 
-.number-box>input{
-    font-size: 50px;
-}
-.submit-box>.check-box{
-    width:100%;
-    height:100%;
-    background-color: skyblue;
-    border: 2px solid yellow;
-}
-
-.score>.textemoji{
-    margin-left: auto;
-}
-
-.textemoji{
-    color:white;
+.guessHistory {
+  margin-left: 20px;
+  border: 4px solid white;
+  height: 20%;
+  width: 28%;
+  color: white;
+  text-align: center;
+  margin-top: 25%;
+  font-size: 24px;
+  font-family: arial;
+  border-radius: 10px;
 }
 
-.scores{
-    width:100%;
+.guessInput {
+
+  width: 15%;
+  margin-left: 10%;
+
 }
 
-.hint
-{
-    width:100%;
+.guess1 {
+  background-color: transparent;
+  text-align: center;
+  height: 20%;
+  font-size: 22px;
+  width: 100%;
+  border: none;
+}
+
+.guess2 {
+  background-color: lightgreen;
+  font-size: 24px;
+  border-radius: 5px;
+  border-color: green;
+  margin-left: 30%;
 }
